<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reportEditCoordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/separator" />

        <TextView
            style="@style/ReportHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_edit_date_header" />

        <include layout="@layout/separator" />

        <TextView
            android:id="@+id/reportEditDate"
            style="@style/ReportContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            tools:text="2016-09-01" />

        <include layout="@layout/separator" />

        <TextView
            style="@style/ReportHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/reportEditHours"
            android:text="@string/report_edit_hours_header" />

        <include layout="@layout/separator" />

        <EditText
            android:id="@+id/reportEditHours"
            style="@style/ReportContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:inputType="numberDecimal"
            tools:text="@string/report_hours_default_value" />

        <include layout="@layout/separator" />

        <TextView
            style="@style/ReportHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/reportEditDescription"
            android:text="@string/report_edit_comment_header" />

        <include layout="@layout/separator" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/reportEditSaveButton"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_edit_save_button" />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>